0.4.16 (in development)
------------------------------------------------------------------------
- Improved: [#22967] Add medium and large half loops to the Wooden and Classic Wooden Roller Coasters.
- Improved: [#23010] Make AppImage compatible with Ubuntu 22.04 and Debian Bookworm again.
- Fix: [#22615] Crash when drawing Space Rings with an invalid ride entry.
- Fix: [#22633] Crash when drawing loading screen with an outdated g2.dat.
- Fix: [#22918] Zooming with keyboard moves the view off centre.
- Fix: [#22920] Crash when sacking a staff member.
- Fix: [#22921] Wooden RollerCoaster flat to steep railings appear in front of track in front of them.
- Fix: [#22962] Fuzzy horizontal-to-vertical line transitions in charts.
- Fix: [#23009] Scenarios from RCT Classic (.sea files) are not included in the scenario index.
- Fix: [#23015] Crash when loading a save game when the construction window is still open.
- Fix: [#23018] Crash when loading a new game when the construction window is still open.
- Fix: [#23023] Large scenery clearance height interpreted as negative when greater than 127.
- Fix: [#23044] "remove_unused_objects" command causes blank peep names.
- Fix: [#23048] Map generator allows map sizes out of range through text input.
- Fix: [#23058] [Plugin] Changing window colours doesn’t trigger the window to be fully redrawn.

0.4.15 (2024-10-06)
------------------------------------------------------------------------
- Feature: [#775] Add 2x and 4x zoom levels to software renderer (previously limited to OpenGL).
- Feature: [#15642] Track design placement can now use construction modifier keys (ctrl/shift).
- Feature: [#20539] [Plugin] Add API for getting a ride’s statistics.
- Feature: [#21521] [Plugin] Add hook 'park.guest.softcap.calculate' called before calculating the soft guest cap.
- Feature: [#22383] Add downward-inclined brakes to hybrid coaster and single rail coaster.